syntax = "proto3";

package user;
option go_package = "shared/proto/user;userpb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service UserService {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (TokenResponse);
    rpc Refresh (RefreshRequest) returns (TokenResponse);
    rpc GetUser (GetUserRequest) returns (GetUserResponse);
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
    rpc AddUserAddress (CreateUserAddressRequest) returns (CreateUserAddressResponse);
    rpc GetUserAddresses (GetUserAddressesRequest) returns (GetUserAddressesResponse);
    rpc UpdateUserAddress (UpdateUserAddressRequest) returns (UpdateUserAddressResponse);
    rpc DeleteUserAddress (DeleteUserAddressRequest) returns (google.protobuf.Empty);
}

message RegisterRequest {
    string email = 1;
    string password = 2;
    string full_name = 3;
    string phone = 4;
}

message RegisterResponse {
    string user_id = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message TokenResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message RefreshRequest {
    string refresh_token = 1;
}


message GetUserRequest {
    string user_id = 1;
}

message GetUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    string user_id = 1;
    optional string full_name = 2;
    optional string email = 3;
    optional string phone = 4;
    optional string avatar_url = 5;
    optional google.protobuf.Timestamp date_of_birth = 6;
    optional string gender = 7;
}

message UpdateUserResponse {
    User user = 1;
}

message CreateUserAddressRequest {
    string user_id = 1;
    string address_type = 2;
    string full_name = 3;
    string phone = 4;
    string address_line1 = 5;
    string address_line2 = 6;
    string ward = 7;
    string city = 8;
    string country = 9;
    bool is_default = 10;
}

message CreateUserAddressResponse {
    Address address = 1;
}

message UpdateUserAddressRequest {
    string id = 1;
    string user_id = 2;
    optional string address_type = 3;
    optional string full_name = 4;
    optional string phone = 5;
    optional string address_line1 = 6;
    optional string address_line2 = 7;
    optional string ward = 8;
    optional string city = 9;
    optional string country = 10;
    optional bool is_default = 11;
}

message UpdateUserAddressResponse {
    Address address = 1;
}

message GetUserAddressesRequest {
    string user_id = 1;
}

message GetUserAddressesResponse {
    repeated Address addresses = 1;
}

message DeleteUserAddressRequest {
    string address_id = 1;
    string user_id = 2;
}

message User {
    string id = 1;
    string full_name = 2;
    string email = 3;
    string phone = 4;
    string avatar_url = 5;
    google.protobuf.Timestamp date_of_birth = 6;
    string gender = 7;
    string status = 8;
}

message Address {
    string id = 1;
    string user_id = 2;
    string address_type = 3;
    string full_name = 4;
    string phone = 5;
    string address_line1 = 6;
    string address_line2 = 7;
    string ward = 8;
    string city = 9;
    string country = 10;
    bool is_default = 11;
}
